# highflyers-protocol

./: .gitignore  CMakeLists.txt
descriptions/: imav2014.hfproto
doc/: draft
src/: .gitignore  CMakeLists.txt  highflyers-protocol.sln
src/ansic/: CMakeLists.txt
src/ansic/highflyers-protocol/: .cproject  .project  CMakeLists.txt
src/ansic/highflyers-protocol-test/: CMakeLists.txt
src/cpp/: highflyers-protocol.sln
src/cpp-devel-test/highflyers-protocol-generator/: CodeGenerator.h  Enumeration.cpp  ObjectType.h  Structure.cpp  Structure.h  highflyers-protocol-generator.vcxproj.filters
src/cpp-devel-test/highflyers-protocol-test/: Frame.cpp  highflyers-protocol-test.vcxproj.filters  stdafx.cpp
src/csharp/: .gitignore  CMakeLists.txt  FrameBuilder.cs  Parser.cs  Utils.cs  highflyers-protocol-csharp.sln  highflyers-protocol.csproj  highflyers-protocol.sln
src/highflyers-protocol/: FrameParserHelper.cs  Parser.cs  highflyers-protocol.csproj
src/highflyers-protocol-c/: CMakeLists.txt  CppUsage.cpp  frame.c  frame.h  frame_builder.c  frame_builder.h  frame_parser_helper.c  frame_parser_helper.h  frames.c  frames.h  highflyers-protocol-c.cproj  main.c  parser.c  parser.h  types.h
src/highflyers-protocol-c-test/: highflyers-protocol-c-test.cproj  main.c
src/highflyers-protocol-generator/: CodeGenerator.cs  FrameBuilderGenerator.cs  FramesGenerator.cs  Program.cs  highflyers-protocol-generator.csproj
src/highflyers-protocol-test/: FrameParserHelperTest.cs  ParserTest.cs  SerializeTest.cs  highflyers-protocol-test.csproj
(+85 files in other folders)
